--- a/cropapp/templates/admin/finished.html
+++ b/cropapp/templates/admin/finished.html
@@ -39,10 +39,12 @@
                                 <td>{{x.pname}}</td>
                                 <td>{{x.quantity}}</td>
                                 <td>
-                                    <script>
+
+                                    {{x.price}}
+                                    <!-- <script>
                                         var i = {{ x.price }}* {{ x.quantity }};
                                         document.write(i);
-                                    </script>
+                                    </script> -->
                                 </td>
                                 <td>{{x.uid_id}}</td>
                                 <td>{{x.Add1}}<br />{{x.Add2}}<br />{{x.Add3}}</td>
