--- a/cropapp/templates/user/userbase.html
+++ b/cropapp/templates/user/userbase.html
@@ -64,14 +64,14 @@
 
             </li>
   
-	          <li class="nav-item"><a href="/managecrops" class="nav-link">Crops</a></li>
+	          <li class="nav-item"><a href="/userhome" class="nav-link">Crops</a></li>
             <!-- <li class="nav-item"><a href="/msg" class="nav-link">Messages</a></li> -->
             <li class="nav-item cta cta-colored"><a href="/messagetoAdmin/" class="nav-link"><span class="icon-envelope"></span><label id="cartcount">[]</label></a></li>
 
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="shop" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hey ,{{ user.fname}}{{user.lname}}!</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="orderhistory">Order History</a>
+                <a class="dropdown-item" href="/orderDetails/">Order History</a>
                 <a class="dropdown-item" href="/changeaddress/">Change Address</a>
                 <a class="dropdown-item" href="/userupdate/">Change Password</a>
                 <a class="dropdown-item" href="/logout">LogOut</a>
