--- a/cropapp/templates/admin/adminbasee.html
+++ b/cropapp/templates/admin/adminbasee.html
@@ -67,7 +67,7 @@
             <a class="nav-link dropdown-toggle" href="shop" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">Hey ,{{ admin.uname}}!</a>
             <div class="dropdown-menu" aria-labelledby="dropdown04">
-              <a class="dropdown-item" href="/updateadminpass">Change Password</a>
+              <a class="dropdown-item" href="/adminpass">Change Password</a>
               <a class="dropdown-item" href="/logout">LogOut</a>
             </div>
           </li>
