--- a/cropapp/templates/user/buynow.html
+++ b/cropapp/templates/user/buynow.html
@@ -12,9 +12,15 @@
       </div>
     </div>
   </div>
-  <br>
+  <section class="ftco-section">
+    <div class="container">
+      <!-- Content -->
+      <div id="content" class="colM">
+  
+        <div id="content-main">
 <center>
-<form action="/placeorder/" method="post">{% csrf_token %}
+<form action="/placeorder/" method="post">
+    {% csrf_token %}
     <table>
         <tr>
             <th>
@@ -108,6 +114,10 @@
     </table>
 </form>
 </center>
+        </div>
+      </div>
+    </div>
+  </section>
 <!-- <script>
     function getprice()
      {
