--- a/cropapp/templates/contact.html
+++ b/cropapp/templates/contact.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block Content1 %}
-    <div class="hero-wrap hero-bread" style="background-image: url('{% static '/images/bg_1.jpg' %}');">
+    <div class="hero-wrap hero-bread" style="background-image: url('{% static '/images/bg_n1.jpg' %}');">
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center">
           <div class="col-md-9 ftco-animate text-center">
@@ -15,7 +15,7 @@
     <section class="ftco-section contact-section bg-light">
       <div class="container">
       	<div class="row d-flex mb-5 contact-info">
-          <div class="w-100"></div>
+          <div class="w-100">
           <div class="col-md-3 d-flex">
           	<div class="info bg-white p-4">
 	            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
