--- a/cropapp/templates/user/message.html
+++ b/cropapp/templates/user/message.html
@@ -1,33 +1,89 @@
 {% extends 'user/userbase.html' %}
 {% load static %}
 {% block Content1 %}
-<center>
-    <div id="msg">
-        <div id="msg1">
-            <h2>
-                <font color="black"> Ask a question:</font>
-            </h2>
-            <form action="/messageDb/" method="post">{% csrf_token %}
-                <textarea name="quest" id="textmsg"></textarea>
-            <input type="number" name="uid" value="{{user.id}}" hidden/>
-            <input type="submit" value="send">
-            </form>
-
+<div class="hero-wrap hero-bread" style="background-image: url('{% static '/images/bg_n1.jpg' %}');">
+    <div class="container">
+      <div class="row no-gutters slider-text align-items-center justify-content-center">
+        <div class="col-md-9 ftco-animate text-center">
+            <p class="breadcrumbs"><span class="mr-2">Chat</span></p>
+          <h1 class="mb-0 bread">With Admin</h1>
         </div>
-        </div>
-  </center>
-</div><br><br/>
-  <center>
-      <h2>Previous messages with admin</h2><br><br/><br/>
-
-    <div>
-        <table border="">
-            <tr><th>Question</th><th>Reply</th></tr>
-            {% for x in msgs %}
-              <tr><td>{{x.quest}}</td><td>{{x.rep}}</td></tr>
-            {% endfor %}
-        </table>
-
+      </div>
     </div>
+  </div>
 
+<section class="ftco-section contact-section bg-light">
+    <div class="container">
+        <div class="row d-flex mb-5 contact-info">
+            <div class="w-100">
+
+
+                <div class="row block-9">
+                    <div class="col-md-6 order-md-last d-flex">
+
+                        <form action="/messageDb/" method="POST" class="bg-white p-5 contact-form">
+                            {% csrf_token %}
+                            <input type="number" name="uid" value="{{user.id}}" hidden />
+                            <h2>
+                                <font color="black"> Ask a question ?</font>
+                            </h2>
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="{{user.fname}}{{user.lname}}">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="{{user.email}}">
+                            </div>
+                            <div class="form-group">
+                                <textarea name="quest" id="textmsg" cols="30" rows="7" class="form-control"
+                                    placeholder="Message"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+                            </div>
+                        </form>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+{% endblock %}
+
+{% block Content2 %}
+
+<section class="ftco-section ftco-cart">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 ftco-animate">
+                <div class="cart-list">
+                    <center>
+                        <h2>
+                            <font color="black"> Previous Message And Reply</font>
+                        </h2>
+                    </center>
+                    <br>
+                    <table class="table">
+                        <thead class="thead-primary">
+                            <tr class="text-center">
+                                <th>Send message</th>
+                                <th>Reply message</th>
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for x in msgs %}
+                            <tr>
+                                <td>{{x.quest}}</td>
+                                <td>{{x.rep}}</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
