--- a/cropapp/templates/admin/adminbasee.html
+++ b/cropapp/templates/admin/adminbasee.html
@@ -60,14 +60,14 @@
 
           <li class="nav-item"><a href="/adminhome/" class="nav-link">Crops</a></li>
           <li class="nav-item"><a href="/userdetails/" class="nav-link">View Users</a></li>
-          <li class="nav-item"><a href="/adViewMessages/" class="nav-link">Messages</a></li>
+          <li class="nav-item"><a href="/adViewMessages/" class="nav-link"><label id="cartcount">Messages</label>&nbsp;<span class="icon-envelope"></span></a></li>
           <li class="nav-item"><a href="/aboutadmin" class="nav-link">About</a></li>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="shop" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">Hey ,{{ admin.uname}}!</a>
             <div class="dropdown-menu" aria-labelledby="dropdown04">
-              <a class="dropdown-item" href="/adminpass">Change Password</a>
+              <a class="dropdown-item" href="/changeadminpass">Change Password</a>
               <a class="dropdown-item" href="/logout">LogOut</a>
             </div>
           </li>
