--- a/cropapp/templates/user/userhome.html
+++ b/cropapp/templates/user/userhome.html
@@ -30,7 +30,7 @@
                     <div class="col-sm-12 ftco-animate text-center">
                         <h1 class="mb-2">Let's Farm Together for you &amp; Nation</h1>
                         <h2 class="subheading mb-4">We can develop organic vegetables &amp; fruits</h2>
-                        <p><a href="shop" class="btn btn-primary">Shop now</a></p>
+                        <p><a href="/userhome" class="btn btn-primary">Shop now</a></p>
                     </div>
 
                 </div>
