--- a/cropapp/templates/index.html
+++ b/cropapp/templates/index.html
@@ -44,13 +44,13 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="/index" class="nav-link">Home</a></li>
             
-	          <li class="nav-item dropdown">
+	          <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="shop" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
               	<a class="dropdown-item" href="/shop">Shop</a>
                 
               </div>
-            </li>
+            </li> -->
 	          
             <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="/contact" class="nav-link">Contact us</a></li>
