--- a/cropapp/templates/user/productview.html
+++ b/cropapp/templates/user/productview.html
@@ -6,8 +6,8 @@
   <div class="container">
     <div class="row no-gutters slider-text align-items-center justify-content-center">
       <div class="col-md-9 ftco-animate text-center">
-        <p class="breadcrumbs"><span class="mr-2">Freshly</span> <span>Plucked</span></p>
-        <h1 class="mb-0 bread">Product</h1>
+        <p class="breadcrumbs"><span class="mr-2">Fresh</span></p>
+        <h1 class="mb-0 bread">Products</h1>
       </div>
     </div>
   </div>
