--- a/cropapp/templates/user/userbase.html
+++ b/cropapp/templates/user/userbase.html
@@ -41,9 +41,9 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="/userhome" class="nav-link">User Home</a></li>
+	          <li class="nav-item active"><a href="/userhome" class="nav-link">Home</a></li>
 
-	          <li class="nav-item dropdown">
+	          <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="Orders" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Orders</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
               	<a class="dropdown-item" href="/orderDetails/">View Orders</a>
@@ -51,7 +51,7 @@
               	<a class="dropdown-item" href="/ViewFinished">View Finished Orders</a>
               </div>
 
-            </li>
+            </li> -->
 	          <li class="nav-item active"><a href="/manageaccount" class="nav-link"> Manage Account</a></li>
 
             <li class="nav-item dropdown">
@@ -66,14 +66,14 @@
   
 	          <li class="nav-item"><a href="/userhome" class="nav-link">Crops</a></li>
             <!-- <li class="nav-item"><a href="/msg" class="nav-link">Messages</a></li> -->
-            <li class="nav-item cta cta-colored"><a href="/messagetoAdmin/" class="nav-link"><span class="icon-envelope"></span><label id="cartcount">[]</label></a></li>
+            <li class="nav-item cta cta-colored"><a href="/messagetoAdmin/" class="nav-link"><label id="cartcount">Message</label>&nbsp;<span class="icon-envelope"></span></a></li>
 
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="shop" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hey ,{{ user.fname}}{{user.lname}}!</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
                 <a class="dropdown-item" href="/orderDetails/">Order History</a>
                 <a class="dropdown-item" href="/changeaddress/">Change Address</a>
-                <a class="dropdown-item" href="/userupdate/">Change Password</a>
+                <a class="dropdown-item" href="/changeuserpass/">Change Password</a>
                 <a class="dropdown-item" href="/logout">LogOut</a>
               </div>
             </li>
