--- a/cropapp/templates/index.html
+++ b/cropapp/templates/index.html
@@ -102,12 +102,12 @@
         <div class="row d-flex justify-content-center py-5">
           
           <div class="col-md-6 d-flex align-items-center bottom-info">
-            <form action="search" class="subscribe-form">
+            <!-- <form action="search" class="subscribe-form">
               <div class="form-group d-flex">
                 <input type="text" class="form-control" id="id_input" name="pname" placeholder="Search Products">
                 <input type="submit" value="Search" style="border-radius: 0.55rem;" class="submit px-3 ">
               </div>
-            </form>
+            </form> -->
           </div>
         </div>
       </div>
