--- a/cropapp/templates/about.html
+++ b/cropapp/templates/about.html
@@ -4,7 +4,7 @@
 {% block Content1 %}
 
 
-    <div class="hero-wrap hero-bread" style="background-image: url('{% static '/images/bg_1.jpg' %}');">
+    <div class="hero-wrap hero-bread" style="background-image: url('{% static '/images/bg_n2.jpg' %}');">
         <div class="container">
           <div class="row no-gutters slider-text align-items-center justify-content-center">
             <div class="col-md-9 ftco-animate text-center">
