--- a/cropapp/templates/user/account.html
+++ b/cropapp/templates/user/account.html
@@ -1,69 +1,102 @@
 {% extends 'user/userbase.html' %}
 {% load static %}
 {% block Content1 %}
-<div class="hero-wrap hero-bread" style="background-image: url('{% static '/images/bg_n1.jpg' %}');">
-    <div class="container">
-        <div class="row no-gutters slider-text align-items-center justify-content-center">
-            <div class="col-md-9 ftco-animate text-center">
-                <p class="breadcrumbs"><span class="mr-2">ADD</span></p>
-                <h1 class="mb-0 bread">New Card</h1>
-            </div>
-        </div>
-    </div>
-</div>
 
-<section class="ftco-section">
-    <div class="container">
-        <!-- Content -->
-        <div id="content" class="colM">
+<div class="container">
+    <!-- Content -->
+    <div id="content" class="colM">
 
-            <div id="content-main">
+        <div id="content-main">
 
-                <form action="/addaccount/" method="post">
-                    {% csrf_token %}
-                    <div class="container">
+            <link rel="stylesheet" href="{% static 'css/card.css' %}">
+            <form action="/addaccount/" method="post">
+                {% csrf_token %}
 
-                        <section class="panel panel-default">
-                            <div class="panel-body">
-                                <div class="form-group">
-                                    <label for="cnum" class="col-sm-3 control-label"> Card Number</label>
-                                    <div class="col-sm-9">
-                                        <input type="text" name="cnum" value="" class="form-control" id="cnum" required>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="cvv" class="col-sm-3 control-label">CVV</label>
-                                    <div class="col-sm-9">
-                                        <input type="text" class="form-control" name="cvv" value="" id="cvv" required>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="expdate" class="col-sm-3 control-label">Expiry Date</label>
-                                    <div class="col-sm-9">
-                                        <input type="date" class="form-control" name="edate" value="" id="expdate"
-                                            required>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="amount" class="col-sm-3 control-label">Amount</label>
-                                    <div class="col-sm-9">
-                                        <input type="text" class="form-control" name="amnt" value="" id="amount"
-                                            required>
-                                    </div>
-                                </div>
-                                <hr>
+                <div id="wrapper">
+                    <center>
+                        <h2>ADD NEW CARD</h2>
+                    </center>
 
-                                <div class="form-group">
-                                    <div class="col-sm-offset-3 col-sm-9">
-                                        <input type="submit" class="btn btn-primary" value="Update">
-
-                                    </div>
-                                </div>
+                    <div class="row">
+                        <div class="col-xs-5">
+                            <div id="cards">
+                                <img
+                                    src="http://icons.iconarchive.com/icons/designbolts/credit-card-payment/256/Visa-icon.png">
+                                <img
+                                    src="http://icons.iconarchive.com/icons/designbolts/credit-card-payment/256/Master-Card-icon.png">
                             </div>
+                            <!--#cards end-->
+                            <div class="form-check">
+                                <label class="form-check-label" for='card'>
+                                    <input id="card" class="form-check-input" type="checkbox" value="">
+                                    Pay $150.00 with credit card
+                                </label>
+                            </div>
+                        </div>
+                        <!--col-xs-5 end-->
+                        <div class="col-xs-5">
+                            <div id="cards">
+                                <img
+                                    src="http://icons.iconarchive.com/icons/designbolts/credit-card-payment/256/Paypal-icon.png">
+                            </div>
+                            <!--#cards end-->
+                            <div class="form-check">
+                                <label class="form-check-label" for='paypal'>
+                                    <input id="paypal" class="form-check-input" type="checkbox" value="">
+                                    Pay $150.00 with PayPal
+                                </label>
+                            </div>
+                        </div>
+                        <!--col-xs-5 end-->
+                    </div>
+                    <!--row end-->
 
-                </form>
-            </div>
+
+                    <div class="row">
+                        <div class="col-xs-5">
+
+                            <label>Card Number</label>
+                            <input type="text" name="cnum" value="" required>
+                        </div>
+                        <!--col-xs-5-->
+                        <div class="col-xs-5">
+
+                            <label>CVV / CVC *</label>
+                            <input type="text" name="cvv" value="" required>
+                        </div>
+                        <!--col-xs-5-->
+                    </div>
+                    <!--row end-->
+                    <div class="row row-three">
+                        <div class="col-xs-2">
+
+                            <label>Expiry Date</label>
+                            <input type="date" name="edate" value="" required>
+
+                        </div>
+                        <!--col-xs-3-->
+                        <div class="col-xs-2">
+
+                            <label>Current Amount</label>
+                            <input type="text" name="amnt" value="" required>
+                        </div>
+                        <!--col-xs-3-->
+                        <div class="col-xs-5">
+                            <span class="small">* CVV or CVC is the card security code, unique three digits number on
+                                the back of your card seperate from its number.</span>
+                        </div>
+                        <!--col-xs-6 end-->
+                    </div>
+                    <!--row end-->
+                    <footer>
+                        <button class="btn" type="reset">Clear</button>
+                        <button class="btn" type="submit">UPDATE</button>
+
+                    </footer>
+                </div>
+                <!--wrapper end-->
+            </form </div>
         </div>
     </div>
-</section>
-{% endblock %}
+    </section>
+    {% endblock %}
